------------------------------------------------------------
"o": new feature
"*": bug fixed
"!": change that can break compatibility with older version
------------------------------------------------------------

version: 1.5.1
===========================
* [PR#133] Remove unnecessary with_path argument from deriving show in signature. Replace String.lowercase to String.lowercase_ascii.

version: 1.5.0, 2023-11-16
===========================
o [PR#132] Added `urlencode` filter.
* [PR#125] Improve Tsafe support.
* [PR#124] Fixed jg_highlight.
o [PR#123] Defined `safe` filter as `jg_safe`.
! [PR#121] To match the official jinja2, rename filter `to_json` to `tojson`.
o [PR#121] Support Tsafe value in jg_runtime.

version: 1.4.4, 2021-09-04
===========================
o [PR#121] Added `to_json` filter.
* [PR#120] Use Hashtbl.replace instead of Hashtbl.add in jg_init_context.
! [PR#119] Supports `set namespace[expr] = xxx` style syntax.

version: 1.4.3, 2021-01-15
===========================
* Fixed jg_captalize(lowercase if it's not first letter).

version: 1.4.2, 2020-11-15
===========================
o [ISSUE#116] Use character reference instead of character number in html escaping.
o [PR#115] object(Tpat, Tobj, Thash) is merged as Tpat by jg_plus.

version: 1.4.1, 2020-09-17
===========================
* [ISSUE#114] default filter is not usable.

version: 1.4.0, 2020-06-19
===========================
o [ISSUE#112] Added new module Jg_template2(reviced version api).
o [PR#113] Get the custom data from a function instead of an association list.

version: 1.3.4, 2020-04-27
===========================
o [PR#111] Added new module(Jg_interp.Loaded) for loading templates for multiple evaluations.
o [PR#110] Raise errors when macro gets called with unknown arguments.
o [PR#109] Add support for capturing a block's output into a variable.
o [PR#108] jg_runtime: added 'flatten' filter.

version: 1.3.3, 2020-02-27
===========================